--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
